# mlir-systolic

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY.txt  CLEANUP_CHECKLIST.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  DOCS_REORGANIZATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  快速参考卡.md  整理工作文件索引.md
.devcontainer/: Dockerfile  devcontainer.json
autosa_hls_output/: kernel_cnn_small.cpp
autosa_hls_refs/: generation_summary.json
docs/: ALLO_INTEGRATION_ANALYSIS.md  ARCHITECTURE_OVERVIEW.md  AUTOSA_ARCHITECTURE.md  AUTOSA_REPRODUCTION_ROADMAP.md  AUTOSA_SPACETIME_ANALYSIS.md  AUTOSA_TEST_GENERATION_GUIDE.md  BRANCH_POLYHEDRAL_CHECK.md  BUILD_POLYGEIST.md  BUILD_STEPS.md  CODE_ISSUES_DETAILED_ANALYSIS.md  CODE_STRUCTURE.md  COMPREHENSIVE_SUMMARY.md  CURRENT_STATUS.md  CURRENT_WORK_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STATUS.md  DOCUMENT_CLEANUP_PLAN.md  DOCUMENT_INDEX.md  DOCUMENT_ORGANIZATION.md  FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  INTERACTIVE_MODE_ANALYSIS.md  NEXT_STEPS_TECHNICAL_ROADMAP.md  PHASE1_COMPLETION_REPORT.md  POLYHEDRAL_STATUS.md  POLYMER_IMPLEMENTATION_STATUS.md  POLYMER_INTEGRATION.md  PROJECT_ORGANIZATION_AND_ANALYSIS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  RANDOM_ACCESS_ANALYSIS.md  RANDOM_ACCESS_ANALYSIS_RESULTS.md  RANDOM_ACCESS_ISSUE_ANALYSIS.md  RANDOM_ACCESS_THEORETICAL_ANALYSIS.md  README.md  SCOP_REGION.md  SIMD2_ISSUE_ANALYSIS.md  SPACETIME_ANALYSIS.md  (+10 more)
docs/archive/: AUTOSA_OPTIMIZATION_SUMMARY.md  AUTOSA_OUTPUT_ORGANIZATION_PLAN.md  DEBUG_STATUS.md  DRAIN_MODULE_IMPLEMENTATION.md  POLYMER_BUILD_PLAN.md  POLYMER_ENABLE_PROGRESS.md  POLYMER_ENABLE_STATUS.md  README.md  SYSTOLIC_DATAFLOW_GENERATION_COMPLETE.md  WORK_PROGRESS_AND_PLAN.md
docs/autosa/: AUTOSA_ANALYSIS.md  README.md  REORGANIZATION_COMPLETION_REPORT.md  comparison_with_autosa.md
docs/guide/: BUILD_GUIDE.md  CODE_STRUCTURE.md  DEVELOPMENT_GUIDE.md
docs/issues/: README.md  SIMD2_ISSUE_ANALYSIS.md
docs/other-issues/: DATA_REUSE_STRATEGY.md
docs/project/: ALLO_HLS_CODE_GENERATION_RULES.md  ANALYSIS_DOCUMENTATION_GUIDE.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  BUILD_STEPS.md  FINAL_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  NEXT_PHASE_WORK_PLAN.md  POLYMER_LIBRARIES_REQUIRED.md  PROJECT_STATUS.md  README.md  README_ANALYSIS.md  SCRIPTS.md
docs/reference/: PROJECT_STRUCTURE.md
docs/spacetime/: README.md  SPACETIME_IMPLEMENTATION_PLAN.md  SPACETIME_TEST_ANALYSIS.md  ST3_CODE_VERIFICATION.md  ST3_DETAILED_CODE_ANALYSIS.md  ST3_FUNCTION_DIFF_ANALYSIS.md  ST3_OPTIMIZATION_ANALYSIS.md
docs/status/: PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  UNCOMMITTED_CODE_REVIEW.md  UNCOMMITTED_CODE_SUMMARY.md
docs/write-time-reordering/: DOCUMENTATION_CHECKLIST.md  DOCUMENT_ORGANIZATION.md  WRITE_TIME_REORDERING_ANALYSIS_REPORT.md  WRITE_TIME_REORDERING_CODEGEN_INTEGRATION.cpp  WRITE_TIME_REORDERING_IMPLEMENTATION.md  WRITE_TIME_REORDERING_ISL_IMPLEMENTATION.cpp  WRITE_TIME_REORDERING_QUICK_REFERENCE.md
include/: CMakeLists.txt
include/systolic/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  LayoutOptimizer.cpp  ParametricSpaceTime.cpp  PolyhedralAccessAnalyzer.cpp  PolyhedralAccessAnalyzer.h  PolymerAnalysis.cpp  SpaceTimeAnalysis.cpp  WriteTimeReorderingAnalysis.cpp  WriteTimeReorderingAnalysis.h
lib/Dialect/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  DataflowGeneration.cpp  SystolicDataflowGeneration.cpp  SystolicDataflowToHLS.cpp  SystolicTransform.cpp
lib/Translation/: CMakeLists.txt  EmitHLSCpp.cpp
scripts/: README.md  build-polygeist-dev.sh  build-polygeist-safe.sh  build-polygeist.sh  build-systolic-dev.sh  build-systolic.sh  build-unified.sh  check_random_access.sh  compare_effective_code.sh  detailed_code_diff.sh  generate_autosa_reference.py  generate_autosa_reference.sh  generate_autosa_tests.sh  generate_other_kernels.sh  organize_reference_samples.sh  summarize_autosa_refs.py  verify_effective_code.sh
test/: CMakeLists.txt  CURRENT_STATUS.md  DEBUG_FIX_SUMMARY.md  DEBUG_SUCCESS.md  FINAL_VERIFICATION_SUMMARY.md  MTTKRP_TEST_STATUS.md  MTTKRP_TEST_SUMMARY.md  PASS_CHECK_SUMMARY.md  PASS_REGISTRATION_FIX.md  PASS_REGISTRATION_SUCCESS.md  PASS_STATUS_SUMMARY.md  PASS_VERIFICATION_SUCCESS.md  PHASE2_TESTING_GUIDE.md  PHASE2_TEST_STATUS.md  REORDERING_TEST_RESULTS.md  TESTING_GUIDE.md  TEST_RESULTS.md  VERIFICATION_COMPLETE.md  VERIFICATION_RESULTS.md  VERIFICATION_SUMMARY.md  WRITE_TIME_REORDERING_SUCCESS.md  autosa_comparison_summary.md  autosa_debugging_guide.md  autosa_multi_kernel_results.md  collect_autosa_hls_refs.sh  compare_with_autosa.sh  generate_autosa_reference.sh  generate_autosa_variants.sh  generate_multi_kernel_reference.sh  matmul_test.mlir  mm_32x32.mlir  mm_32x32_kernel.cpp  mm_32x32_kernel_v2.cpp  mttkrp_affine_only.mlir  mttkrp_kernel.mlir  mttkrp_simple_test.mlir  mttkrp_with_nonlinear.mlir  organize_autosa_samples.sh  polymer_integration_test.mlir  spacetime-enumeration.mlir  (+19 more)
test/autosa_hls_files/: README.md  cnn_st0.cpp  cnn_st3.cpp  cnn_st4_simd_1_1_1_1.cpp  cnn_st5.cpp  cnn_st8.cpp  mm_st3.cpp  mm_st3_ap4_lat2_simd2.cpp  mm_st3_simd1.cpp  mm_st3_simd8.cpp  mm_st4.cpp  ttmc_st4_ap32_128_32_64_lat2_16_16_simd16_2.cpp
test/autosa_hls_refs/: INDEX.csv  README.md  cnn_default_st7_ap8x4x4x8_lat4x2x2_simd1x1x1x2.cpp  cnn_small_st4_ap8x8x4x8_lat4x2x4_simd1x1x1x2.cpp  cnn_small_st4_ap8x8x4x8_lat4x2x4_simd2x2x2x4.cpp  mm_1024_st0_ap32x32x32_lat8x8_simd2.cpp  mm_1024_st1_ap32x32x32_lat8x8_simd2.cpp  mm_1024_st3_ap32x32x32_lat8x8_simd2.cpp  mm_1024_st5_ap32x4x32_lat16x16_simd2.cpp  mm_512_st3_ap16x16x16_lat4x4_simd2.cpp  mm_512_st3_ap16x16x16_lat8x8_simd4.cpp  mm_default_st2_ap4x32x32_lat8x8_simd2.cpp  mttkrp_default_st3_ap256x256x4_lat32x16_simd16x2.cpp  mttkrp_large_st3_ap64x64x2_lat8x4_simd4x1.cpp  mttkrp_xlarge_st3_ap128x128x2_lat16x8_simd8x1.cpp  (+2 more)
tools/: CMakeLists.txt
tools/systolic-opt/: CMakeLists.txt  systolic-opt.cpp
tools/systolic-translate/: CMakeLists.txt  systolic-translate.cpp
(+284 files in other folders)
